--- a/cloud-demo/cloud-demo-service/src/main/resources/application.properties
+++ b/cloud-demo/cloud-demo-service/src/main/resources/application.properties
@@ -3,3 +3,6 @@ server.port=0
 jdbc.url=jdbc:mysql://127.0.0.1:3306/nbdemo
 jdbc.username=root
 jdbc.password=root
+
+jetty.httpConfig.sendServerVersion=false
+jetty.httpConfig.sendDateHeader=false
