--- a/literpc/pom.xml
+++ b/literpc/pom.xml
@@ -14,5 +14,10 @@
 			<artifactId>loach-client</artifactId>
 			<version>2.2-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-client</artifactId>
+			<version>9.4.9.v20180320</version>
+		</dependency>
 	</dependencies>
 </project>
