--- a/literpc/pom.xml
+++ b/literpc/pom.xml
@@ -13,11 +13,17 @@
 			<groupId>org.nutz.cloud</groupId>
 			<artifactId>loach-client</artifactId>
 			<version>2.2-SNAPSHOT</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-client</artifactId>
 			<version>9.4.9.v20180320</version>
+		</dependency>
+		<dependency>
+			<groupId>org.nutz</groupId>
+			<artifactId>nutzboot-core</artifactId>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
