--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,27 @@
 	<artifactId>nutzcloud-parent</artifactId>
 	<version>2.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
+	<properties>
+		<nutzboot.version>2.2-SNAPSHOT</nutzboot.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.nutz</groupId>
 			<artifactId>nutzboot-core</artifactId>
-			<version>2.2-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.nutz</groupId>
+				<artifactId>nutzboot-parent</artifactId>
+				<version>${nutzboot.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 	<modules>
 		<module>loach-client</module>
 		<module>literpc</module>
@@ -24,7 +38,22 @@
 			</modules>
 		</profile>
 	</profiles>
-	
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.7.0</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<compilerArgs>
+						<arg>-parameters</arg>
+					</compilerArgs>
+					<useIncrementalCompilation>false</useIncrementalCompilation>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 	<distributionManagement>
 		<snapshotRepository>
 			<id>nutzcn-snapshots</id>
