--- a/cloud-demo/cloud-demo-service/pom.xml
+++ b/cloud-demo/cloud-demo-service/pom.xml
@@ -13,10 +13,6 @@
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>org.nutz</groupId>
-			<artifactId>nutzboot-starter-jetty</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 		</dependency>
@@ -42,6 +38,10 @@
 			<groupId>org.nutz.cloud</groupId>
 			<artifactId>loach-client</artifactId>
 			<version>2.2-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.nutz</groupId>
+			<artifactId>nutzboot-starter-tio</artifactId>
 		</dependency>
 	</dependencies>
 	<build>
