--- a/literpc/pom.xml
+++ b/literpc/pom.xml
@@ -25,5 +25,15 @@
 			<artifactId>nutzboot-core</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.t-io</groupId>
+			<artifactId>tio-core</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-pool2</artifactId>
+			<version>2.5.0</version>
+		</dependency>
 	</dependencies>
 </project>
