--- a/cloud-demo/pom.xml
+++ b/cloud-demo/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.nutz</groupId>
-		<artifactId>nutzboot-cloud</artifactId>
+		<artifactId>nutzcloud-parent</artifactId>
 		<version>2.2-SNAPSHOT</version>
 	</parent>
 	<groupId>io.nutz.cloud.demo</groupId>
